# fio-api-rs

./: Cargo.toml  README.md
examples/: doublecsv-reader.rs  get-by-id.rs  hello-fio-api.rs  payment.xml
src/: client.rs  csvdata.rs  error.rs  export.rs  import.rs  lib.rs  period.rs  response.rs  tiny_xml.rs
