[package]
name = "fio-api-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
reqwest = "0.11.4"
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.8.1", features = ["macros"] }

