[package]
name = "fio-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["multipart"] }
log = "0.4.14"
strum = "0.21.0"
strum_macros = "0.21.1"
chrono = "0.4.19"
thiserror = "1.0.26"
serde = { version = "1.0.126", features=["derive"] }
serde-xml-rs = "0.4.1"
csv = "1.1.6"

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.8.1", features = ["macros"] }
pretty_env_logger = "0.4.0"
anyhow = "1.0.42"
